# polars_study

./: pyproject.toml
polars_study/: 00_polars.ipynb
